# ME700-Assignment-1

./: .coverage  Part1TutorialsREADME.md  README.md  coverage.xml  newtons_method_solver.py  newtons_method_tutorial.py  pyproject.toml
.github/: codecov.yml
.github/workflows/: codecov.yml  tests.yml
Bisection-Method/: bisection_solver.py
src/Elasto_Plastic_Model/: Part2TutorialREADME.md  elastoplastic_tutorial.py  exampleelastoplasticmodel.py
src/Newtons-Method/: Part1TutorialREADME.md  Part1TutorialsREADME.md  newtons_method_solver.py
src/Newtons_Method/: Part1TutorialREADME.md  newtons_method_solver.py
src/numerical_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_elastoplastic_solver.py  test_elastoplastic_tutorial.py  test_example.py  test_newtons_method.py  test_newtons_method_tutorial.py
