[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newtons-method"
version = "0.1.0"
authors = [
    { name="Daniel Jones", email="dmj@bu.edu" },
]
description = "Newton's Method Solver Workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "scipy>=1.12.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.1.2", "pytest-cov>=3.0.0"]

[project.urls]
"Homepage" = "https://github.com/dmj-bu/ME700-Assignment-1"
"Bug Tracker" = "https://github.com/dmj-bu/ME700-Assignment-1/issues"
